--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aes = "0.8.4"
+anyhow = "1.0.86"
+clap = { version = "4.5.13", features = ["derive"] }
+ctr = "0.9.2"
+escape-bytes = "0.1.1"
+nxml-rs = "0.5.0"
