--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
-clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6"
 derive_more = { version = "1", default-features = false, features = [
     "debug",
@@ -17,19 +16,21 @@ egui_extras = "0.29"
 fastrand = "2"
 futures = "0.3"
 iced-x86 = "1"
-lazy-regex = "3.3.0"
+lazy-regex = "3"
 memchr = "2"
 obws = { version = "0.13", features = ["events"] }
-rayon = "1.10.0"
+rayon = "1"
 read-process-memory = "0.1"
 serde = { version = "1", features = ["derive"] }
 smart-default = "0.7"
 strfmt = "0.2"
 strum = { version = "0.26", features = ["derive"] }
-sysinfo = "0.31"
+sysinfo = "0.32"
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
-toml = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-zerocopy = { version = "0.7", default-features = false, features = ["alloc"] }
+zerocopy = { version = "0.8", default-features = false, features = [
+    "alloc",
+    "derive",
+] }
