--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ derive_more = { version = "1", default-features = false, features = [
     "display",
 ] }
 eframe = { version = "0.29", features = ["persistence", "ron", "wgpu"] }
+egui-modal = "0.5"
 egui_extras = "0.29"
+ehttp = { version = "0.5", features = ["json", "native-async"] }
 fastrand = "2"
 futures = "0.3"
 iced-x86 = "1"
