--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Build
         id: build
         run: |
-          echo "CI_RELEASE_VERSION=${GITHUB_REF_NAME#v}" >> env-input.toml
+          echo "CI_RELEASE_VERSION=\"${GITHUB_REF_NAME#v}\"" >> env-input.toml
           echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
-          nix build .#windows .#linux .#deb --override-input build-env "file+file://$PWD/env-input.toml"
+          nix build . .#windows .#linux .#deb --override-input build-env "file+file://$PWD/env-input.toml"
 
       - name: Finalize artifacts
         run: |
@@ -32,7 +32,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           name: Release ${{ github.ref_name }}
-          body: Automated release
           draft: true
           files: |
             noita-utility-box-windows.zip
