--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,7 @@ jobs:
       - name: Build
         id: build
         run: |
-          echo "CI_RELEASE_VERSION=\"${GITHUB_REF_NAME#v}\"" >> env-input.toml
-          echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+          echo "CI_RELEASE_VERSION=\"${GITHUB_REF_NAME}\"" > env-input.toml
           nix build . .#windows .#linux .#deb --override-input build-env "file+file://$PWD/env-input.toml"
 
       - name: Finalize artifacts
