--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ derive_more = { version = "1", default-features = false, features = [
 eframe = { version = "0.29", features = ["persistence", "ron", "wgpu"] }
 egui-modal = "0.5"
 egui_extras = "0.29"
-ehttp = { version = "0.5", features = ["json", "native-async"] }
 fastrand = "2"
 futures = "0.3"
 iced-x86 = "1"
@@ -25,6 +24,7 @@ memchr = "2"
 obws = { version = "0.13", features = ["events"] }
 rayon = "1"
 read-process-memory = "0.1"
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 smart-default = "0.7"
 strfmt = "0.2"
