--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ sysinfo = "0.32"
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 tracing = "0.1"
+tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 zerocopy = { version = "0.8", default-features = false, features = [
     "alloc",
