--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ iced-x86 = "1"
 lazy-regex = "3"
 memchr = "2"
 obws = { version = "0.13", features = ["events"] }
+open-enum = "0.5"
 rayon = "1"
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
