--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ derive_more = { version = "1", default-features = false, features = [
 eframe = { version = "0.29", features = ["persistence", "ron", "wgpu"] }
 egui-modal = "0.5"
 egui_extras = "0.29"
+egui_tiles = "0.10"
 fastrand = "2"
 futures = "0.3"
 iced-x86 = "1"
@@ -32,13 +33,13 @@ reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 smart-default = "0.7"
 strfmt = "0.2"
-strum = { version = "0.26", features = ["derive"] }
 sysinfo = "0.32"
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+typetag = "0.2"
 zerocopy = { version = "0.8", default-features = false, features = [
     "alloc",
     "derive",
