--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ eframe = { version = "0.29", features = ["persistence", "ron", "wgpu"] }
 egui-modal = "0.5"
 egui_extras = "0.29"
 egui_tiles = "0.10"
+enum_dispatch = "0.3"
 fastrand = "2"
 futures = "0.3"
 fuzzy-matcher = "0.3"
