--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,16 @@ derive_more = { version = "1", default-features = false, features = [
 ] }
 eframe = { version = "0.29", features = ["persistence", "ron", "wgpu"] }
 egui-modal = "0.5"
-egui_extras = "0.29"
+egui_extras = { version = "0.29", features = ["image"] }
 egui_tiles = "0.10"
-enum_dispatch = "0.3"
 fastrand = "2"
 futures = "0.3"
 fuzzy-matcher = "0.3"
 iced-x86 = "1"
+image = { version = "0.25", default-features = false, features = [
+    "png",
+    "bmp",
+] }
 lazy-regex = "3"
 memchr = "2"
 obws = { version = "0.13", features = ["events"] }
