--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: nix develop --command -- cargo fmt --check
 
       - name: Check (clippy)
-        run: nix develop --command -- cargo clippy --all-targets --all-features -- -D warnings
+        run: nix develop --command -- cargo clippy --no-deps --all-targets --all-features -- -D warnings
 
       - name: Check (docs)
         run: nix develop --command -- cargo doc --no-deps --all-features
@@ -52,9 +52,9 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      # - name: Test
-      #   run: nix develop --command -- cargo test --all-features
-      #   timeout-minutes: 5
+      - name: Test
+        run: nix develop --command -- cargo test --all-features
+        timeout-minutes: 5
 
       # the default package does run the tests
       - name: Build
