--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "nub-macros"
-version.workspace = true
-edition.workspace = true
-license.workspace = true
+version = "0.2.1"
+edition = "2024"
+license = "MIT"
 
 [lib]
 proc-macro = true
