--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,9 @@ derive_more = { version = "2", default-features = false, features = [
     "deref",
     "display",
 ] }
-eframe = { version = "0.30", features = ["persistence", "ron", "wgpu"] }
-egui-modal = "0.6"
-egui_extras = { version = "0.30", features = ["image"] }
-egui_tiles = "0.11"
+eframe = { version = "0.32", features = ["persistence", "ron", "wgpu"] }
+egui_extras = { version = "0.32", features = ["image"] }
+egui_tiles = "0.13"
 fastrand = "2"
 futures = "0.3"
 fuzzy-matcher = "0.3"
@@ -38,16 +37,17 @@ reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 smart-default = "0.7"
 strfmt = "0.2"
-sysinfo = "0.33"
+sysinfo = "0.36"
 thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 typetag = "0.2"
+wgpu = "25" # enables the wgpu default features so we get the default backends
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.60", default-features = false, features = [
+windows = { version = "0.61", default-features = false, features = [
     "Win32_System_Console",
 ] }
 
