--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,10 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Check (flake)
-        uses: DeterminateSystems/flake-checker-action@v9
-        with:
-          fail-mode: true
+      # - name: Check (flake)
+      #   uses: DeterminateSystems/flake-checker-action@v9
+      #   with:
+      #     fail-mode: true
 
       - name: Check (fmt)
         run: nix develop --command -- cargo fmt --check
